--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   # 而且path_provider支持Android、iOS、Linux、MacOS、Windows。
 
   path_provider: ^2.0.13
-  dio: ^5.0.1
+  dio: ^5.1.2
+  dio_cookie_manager: ^3.0.0
+
+  fluttertoast: ^8.2.1   # HUD
+
   flutter:
     sdk: flutter
 
@@ -73,7 +77,9 @@ dependencies:
 
   camera: ^0.10.4
 
-
+  flutter_screenutil: ^5.7.0
+  font_awesome_flutter: ^10.4.0
+  english_words: ^4.0.0
 
 dev_dependencies:
   flutter_test:
